--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <div class="container-fluid header_top_container">
 
           <div class="contact_nav">
-            <a href="">
+            <a class="navbar-brand " href="index.html"> Lazer Ray </a>
+            <a href="https://maps.app.goo.gl/Xuwfr5xUeY8pLoiq6">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
                 Location
@@ -52,7 +53,7 @@
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +20 0000000000
+                Call : +20 1117118800
               </span>
             </a>
             <a href="">
@@ -63,16 +64,12 @@
             </a>
           </div>
           <div class="social_box">
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=61550620866074">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
+     
             </a>
-            <a href="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-            <a href="">
+            <a href="https://instagram.com/gumushhediyelikesyalar?igshid=MmIzYWVlNDQ5Yg==">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -81,7 +78,6 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand " href="index.html"> Lazer Ray </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
@@ -118,8 +114,7 @@
                 <div class="col-lg-10 col-md-11 mx-auto">
                   <div class="detail-box">
                     <h1>
-                      We Provide <br>
-                      Welding Services
+                    مجسم اسلامي
                     </h1>
                     <p>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis fugit, sed tempora praesentium commodi error, hic recusandae repudiandae neque ad molestias, atque veritatis labore quae eveniet autem in
@@ -367,23 +362,17 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  +01 1234567890
+                  Call : +20 1117118800
                 </span>
               </a>
             </div>
           </div>
           <div class="col-md-4 ">
             <div class="social_box">
-              <a href="">
+              <a href="https://www.facebook.com/profile.php?id=61550620866074">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
+              <a href="https://instagram.com/gumushhediyelikesyalar?igshid=MmIzYWVlNDQ5Yg==">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
