--- a/team.html
+++ b/team.html
@@ -81,7 +81,7 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand " href="index.html"> Lazer Ray </a>
+            <a class="navbar-brand " href="index.html"> Gümüş </a>
     
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -182,7 +182,7 @@
       <div class="row">
         <div class="col-md-3 ">
           <a class="navbar-brand" href="index.html">
-            Lazer Ray
+            Gümüş
           </a>
         </div>
         <div class="col-md-5 ">
