--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="col-lg-10 col-md-11 mx-auto">
                   <div class="detail-box">
                     <h1>
-                      مجسم اسلامي
+                        Welcome to<br>Gümüş
                     </h1>
                     <p>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis fugit, sed tempora praesentium
@@ -137,7 +137,7 @@
 
 
   <!-- service section -->
-
+<!--
   <section class="service_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center ">
@@ -253,12 +253,13 @@
       </div>
     </div>
   </section>
-
+-->
   <!-- service section ends -->
 
   <!-- about section -->
 
   <section class="about_section">
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-5 offset-md-1">
@@ -294,6 +295,7 @@
   <!-- team section -->
 
   <section class="team_section layout_padding">
+ 
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
