--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <!-- header section strats -->
     <header class="header_section">
-      <div class="header_top">
+     <!-- <div class="header_top">
         <div class="container-fluid header_top_container">
 
           <div class="contact_nav">
@@ -76,7 +76,7 @@
             </a>
           </div>
         </div>
-      </div>
+      </div>-->
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -116,9 +116,9 @@
               <div class="row">
                 <div class="col-lg-10 col-md-11 mx-auto">
                   <div class="detail-box">
-                    <h1>
-                        Welcome to<br>Gümüş
-                    </h1>
+                    <h2>
+                        Welcome to Gümüş
+                    </h2>
                     <p>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis fugit, sed tempora praesentium
                       commodi error, hic recusandae repudiandae neque ad molestias, atque veritatis labore quae eveniet
