--- a/index.html
+++ b/index.html
@@ -256,41 +256,6 @@
 -->
   <!-- service section ends -->
 
-  <!-- about section -->
-
-  <section class="about_section">
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-5 offset-md-1">
-          <div class="detail-box pr-md-2">
-            <div class="heading_container">
-              <h2 class="">
-                About Us
-              </h2>
-            </div>
-            <p class="detail_p_mt">
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, orThere are many variations of passages of Lorem Ipsum available, but
-              the majority have suffered alteration in some form, by injected humour, orThere are many variations of
-              passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected
-              humour, or
-            </p>
-            <a href="about.html" class="">
-              Read More
-            </a>
-          </div>
-        </div>
-        <div class="col-md-6 px-0">
-          <div class="img-box ">
-            <img src="images/about-img.jpg" class="box_img" alt="about img">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- about section ends -->
 
   <!-- team section -->
 
@@ -411,7 +376,38 @@
   </section>
 
   <!-- end team section -->
+<!-- about section -->
 
+<section class="about_section">
+
+  <div class="container-fluid">
+    <div class="col center">
+      <div class="col-md-5 offset-md-1">
+        <div class="heading_container heading_center">
+          <h2>
+            About Us
+          </h2>
+          <br>
+          <p class="detail_p_mt">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            in some form, by injected humour, orThere are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected humour, orThere are many variations of
+            passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected
+            humour, or
+          </p>
+        </div>
+        <br>
+      </div>
+      <!--<div class="col-md-6 px-0">
+          <div class="img-box ">
+            <img src="images/about-img.jpg" class="box_img" alt="about img">
+          </div>-->
+    </div>
+  </div>
+  </div>
+</section>
+
+<!-- about section ends -->
   <!-- info section -->
   <section class="info_section ">
     <div class="container">
