--- a/index.html
+++ b/index.html
@@ -95,10 +95,7 @@
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="team.html"> Team </a>
+                  <a class="nav-link" href="team.html"> Our Works </a>
                 </li>
               </ul>
             </div>
@@ -381,8 +378,8 @@
 <section class="about_section">
 
   <div class="container-fluid">
-    <div class="col center">
-      <div class="col-md-5 offset-md-1">
+    <div class="center">
+      <div class="container">
         <div class="heading_container heading_center">
           <h2>
             About Us
@@ -420,13 +417,6 @@
           </div>
           <div class="col-md-5 ">
             <div class="info_contact">
-
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>
-                  Call : +20 1117118800
-                </span>
-              </a>
             </div>
           </div>
           <div class="col-md-4 ">
@@ -443,10 +433,10 @@
       </div>
       <div class="info_bottom">
         <div class="row">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="info_detail">
               <h5>
-                Company
+                EGYPT Location
               </h5>
               <p>
                 Randomised words which don't look even slightly believable. If you are going to use a passage of
@@ -455,13 +445,10 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
-
-          </div>
           <div class="col-lg-4 col-md-6">
             <div class="info_detail">
               <h5>
-                Services
+                TURKEY Location
               </h5>
               <p>
                 Randomised words which don't look even slightly believable. If you are going to use a passage of
@@ -486,15 +473,25 @@
                     About
                   </a>
                 </li>
+
                 <li>
-                  <a href="service.html">
-                    Services
+                  <a href="team.html">
+                    Our Works
                   </a>
                 </li>
                 <li>
-                  <a href="team.html">
-                    Team
+                 <br>
+                </li>
+                <li>
+                <div class="info_contact">
+                
+                  <a href="">
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                    <span>
+                      Call : +20 1117118800
+                    </span>
                   </a>
+                </div>
                 </li>
 
               </ul>
