--- a/about.html
+++ b/about.html
@@ -92,11 +92,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
+                
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="team.html"> Team </a>
+                  <a class="nav-link" href="team.html"> Our Works </a>
                 </li>
               </ul>
             </div>
@@ -202,21 +200,16 @@
                   About
                 </a>
               </li>
-              <li>
-                <a href="service.html">
-                  Services
-                </a>
-              </li>
+
               <li>
                 <a href="team.html">
-                  Team
+                  Our Works
                 </a>
               </li>
               <li>
                 <br>
               </li>
               <li>
-                <div class="info_contact">
 
                   <a href="">
                     <i class="fa fa-phone" aria-hidden="true"></i>
@@ -224,7 +217,7 @@
                       Call : +20 1117118800
                     </span>
                   </a>
-                </div>
+                
               </li>
 
             </ul>
