--- a/team.html
+++ b/team.html
@@ -92,11 +92,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
+
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="team.html"> Team </a>
+                  <a class="nav-link" href="team.html"> Our Works </a>
                 </li>
               </ul>
             </div>
@@ -301,7 +299,6 @@
                   <br>
                 </li>
                 <li>
-                  <div class="info_contact">
   
                     <a href="">
                       <i class="fa fa-phone" aria-hidden="true"></i>
@@ -309,7 +306,6 @@
                         Call : +20 1117118800
                       </span>
                     </a>
-                  </div>
                 </li>
   
               </ul>
