--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
  
     <div class="container">
       <div class="heading_container heading_center">
-        <h2>
+        <h2 style="color: #000;">
           Sample of our work
         </h2>
       </div>
