--- a/index.html
+++ b/index.html
@@ -427,10 +427,10 @@
           <div class="col-md-4 ">
             <div class="social_box">
               <a href="https://www.facebook.com/profile.php?id=61550620866074">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <i class="fa fa-facebook" aria-hidden="true" style=" color: #103d82;"></i>
               </a>
               <a href="https://instagram.com/gumushhediyelikesyalar?igshid=MmIzYWVlNDQ5Yg==">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <i class="fa fa-instagram" aria-hidden="true" style=" color: #f71f6c;"></i>
               </a>
             </div>
           </div>
