--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             
             <div class="img-box">
               <br>
-              <img src="images/t1.webp" alt="">
+              <img src="images/t1.png" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -296,7 +296,7 @@
           <div class="box">
             <div class="img-box">
               <br>
-              <img src="images/t1.webp" alt="">
+              <img src="images/t2.png" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -312,7 +312,7 @@
           <div class="box">
             <div class="img-box">
               <br>
-              <img src="images/t1.webp" alt="">
+              <img src="images/t3.png" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -328,7 +328,7 @@
           <div class="box">
             <div class="img-box">
               <br>
-              <img src="images/t1.webp" alt="">
+              <img src="images/t4.png" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -344,7 +344,7 @@
           <div class="box">
             <div class="img-box">
               <br>
-              <img src="images/t1.webp" alt="">
+              <img src="images/t5.png" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -360,7 +360,7 @@
           <div class="box">
             <div class="img-box">
               <br>
-              <img src="images/t1.webp" alt="">
+              <img src="images/t6.png" alt="">
             </div>
             <div class="detail-box">
               <h5>
