--- a/team.html
+++ b/team.html
@@ -122,7 +122,7 @@
 
           <div class="img-box">
             <br>
-            <img src="images/t1.webp" alt="">
+            <img src="images/t1.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
@@ -138,7 +138,7 @@
         <div class="box">
           <div class="img-box">
             <br>
-            <img src="images/t1.webp" alt="">
+            <img src="images/t2.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
@@ -154,7 +154,7 @@
         <div class="box">
           <div class="img-box">
             <br>
-            <img src="images/t1.webp" alt="">
+            <img src="images/t3.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
@@ -170,7 +170,7 @@
         <div class="box">
           <div class="img-box">
             <br>
-            <img src="images/t1.webp" alt="">
+            <img src="images/t4.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
@@ -186,7 +186,7 @@
         <div class="box">
           <div class="img-box">
             <br>
-            <img src="images/t1.webp" alt="">
+            <img src="images/t5.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
@@ -202,7 +202,7 @@
         <div class="box">
           <div class="img-box">
             <br>
-            <img src="images/t1.webp" alt="">
+            <img src="images/t6.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
@@ -236,14 +236,14 @@
             </div>
           </div>
           <div class="col-md-4 ">
-            <div class="social_box">
-              <a href="https://www.facebook.com/profile.php?id=61550620866074">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="https://instagram.com/gumushhediyelikesyalar?igshid=MmIzYWVlNDQ5Yg==">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-              </a>
-            </div>
+          <div class="social_box">
+            <a href="https://www.facebook.com/profile.php?id=61550620866074">
+              <i class="fa fa-facebook" aria-hidden="true" style=" color: #103d82;"></i>
+            </a>
+            <a href="https://instagram.com/gumushhediyelikesyalar?igshid=MmIzYWVlNDQ5Yg==">
+              <i class="fa fa-instagram" aria-hidden="true" style=" color: #f71f6c;"></i>
+            </a>
+          </div>
           </div>
         </div>
       </div>
@@ -299,15 +299,15 @@
                   <br>
                 </li>
                 <li>
-  
-                    <a href="">
-                      <i class="fa fa-phone" aria-hidden="true"></i>
-                      <span>
-                        Call : +20 1117118800
-                      </span>
-                    </a>
+                
+                  <a href="">
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                    <span>
+                      Call : +20 1117118800
+                    </span>
+                  </a>
+                
                 </li>
-  
               </ul>
             </div>
           </div>
