--- a/about.html
+++ b/about.html
@@ -181,9 +181,9 @@
               EGYPT Location
             </h5>
             <p>
-              Randomised words which don't look even slightly believable. If you are going to use a passage of
-              Lorem
-              Ipsum, you need to be sure
+              Factory location : 10th of Ramadan, El-Robiki Cairo/ Egypt<br>
+              Office : 10th of Ramadan, Down Town mall<br>
+              01118709933 - 01101100946
             </p>
           </div>
         </div>
@@ -192,10 +192,9 @@
             <h5>
               TURKEY Location
             </h5>
-            <p>
-              Randomised words which don't look even slightly believable. If you are going to use a passage of
-              Lorem
-              Ipsum, you need to be sure
+            <p>Budak Mah. Yasem iś Mrk. No:42/910 <br>
+              Śehitkamil Zip code : 27090 Gaziantep / TURKEY <br>
+              +905070889191
             </p>
           </div>
         </div>
@@ -221,10 +220,7 @@
                   Our Works
                 </a>
               </li>
-              <li>
-                <br>
-              </li>
-              <li>
+              <li style="width: 200px;">
 
 
                   <a href="">
