--- a/index.html
+++ b/index.html
@@ -268,102 +268,83 @@
       <div class="row">
         <div class="col-md-4 col-sm-6 mx-auto">
 
-          <div class="box">
-
-            <div class="img-box">
-              <br>
-              <img src="images/t1.png" alt="">
+            <div class="box">
+            
+              <div class="img-box">
+                <br>
+                <img src="images/t1.png" alt="">
+              </div>
+              <div class="detail-box">
+                <h5 style="font-family: 'Cairo'; font-size: 30px;">
+                  مجسم باب الملك عبدالله
+                </h5>
+              </div>
             </div>
-            <div class="detail-box">
-              <h5>
-                x-000
-              </h5>
-              <h6 class="">
-                Card
-              </h6>
             </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 mx-auto">
-          <div class="box">
-            <div class="img-box">
-              <br>
-              <img src="images/t2.png" alt="">
+            <div class="col-md-4 col-sm-6 mx-auto">
+              <div class="box">
+                <div class="img-box">
+                  <br>
+                  <img src="images/t2.png" alt="">
+                </div>
+                <div class="detail-box">
+                  <h5 style="font-family: 'Cairo'; font-size: 30px;">
+                    مجسم الكعبه المشرفه
+                  </h5>
+                </div>
+              </div>
             </div>
-            <div class="detail-box">
-              <h5>
-                x-000
-              </h5>
-              <h6 class="">
-                Card
-              </h6>
+            <div class="col-md-4 col-sm-6 mx-auto">
+              <div class="box">
+                <div class="img-box">
+                  <br>
+                  <img src="images/t3.png" alt="">
+                </div>
+                <div class="detail-box">
+                  <h5 style="font-family: 'Cairo'; font-size: 30px;">
+                    مجسم باب حجرة الصحابيين
+                  </h5>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 mx-auto">
-          <div class="box">
-            <div class="img-box">
-              <br>
-              <img src="images/t3.png" alt="">
+            <div class="col-md-4 col-sm-6 mx-auto">
+              <div class="box">
+                <div class="img-box">
+                  <br>
+                  <img src="images/t4.png" alt="">
+                </div>
+                <div class="detail-box">
+                  <h5 style="font-family: 'Cairo'; font-size: 30px;">
+                    مجسم باب الملك عبدالعزيز
+                  </h5>
+                </div>
+              </div>
             </div>
-            <div class="detail-box">
-              <h5>
-                x-000
-              </h5>
-              <h6 class="">
-                Card
-              </h6>
+            <div class="col-md-4 col-sm-6 mx-auto">
+              <div class="box">
+                <div class="img-box">
+                  <br>
+                  <img src="images/t5.png" alt="">
+                </div>
+                <div class="detail-box">
+                  <h5 style="font-family: 'Cairo'; font-size: 30px;">مجسم باب الكعبة الشريفة
+                  </h5>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 mx-auto">
-          <div class="box">
-            <div class="img-box">
-              <br>
-              <img src="images/t4.png" alt="">
+            <div class="col-md-4 col-sm-6 mx-auto">
+              <div class="box">
+                <div class="img-box">
+                  <br>
+                  <img src="images/t6.png" alt="">
+                </div>
+                <div class="detail-box">
+                  <h5 style="font-family: 'Cairo'; font-size: 30px;">
+                    مجسم الروضه الشريفه
+                  </h5>
+                </div>
+              </div>
             </div>
-            <div class="detail-box">
-              <h5>
-                x-000
-              </h5>
-              <h6 class="">
-                Card
-              </h6>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 mx-auto">
-          <div class="box">
-            <div class="img-box">
-              <br>
-              <img src="images/t5.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                x-000
-              </h5>
-              <h6 class="">
-                Card
-              </h6>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 mx-auto">
-          <div class="box">
-            <div class="img-box">
-              <br>
-              <img src="images/t6.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                x-000
-              </h5>
-              <h6 class="">
-                Card
-              </h6>
-            </div>
-          </div>
-        </div>
 
       </div>
     </div>
@@ -450,9 +431,9 @@
                 EGYPT Location
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                Factory location : 10th of Ramadan, El-Robiki Cairo/ Egypt<br>
+                Office : 10th of Ramadan, Down Town mall<br>
+                01118709933 - 01101100946
               </p>
             </div>
           </div>
@@ -461,10 +442,9 @@
               <h5>
                 TURKEY Location
               </h5>
-              <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+              <p>Budak Mah. Yasem iś Mrk. No:42/910 <br>
+                Śehitkamil Zip code : 27090 Gaziantep / TURKEY <br>
+                +905070889191
               </p>
             </div>
           </div>
@@ -490,10 +470,7 @@
                     Our Works
                   </a>
                 </li>
-                <li>
-                  <br>
-                </li>
-                <li>
+                <li style="width: 200px;">
 
                   <a href="">
                     <i class="fa fa-phone" aria-hidden="true"></i>
