--- a/team.html
+++ b/team.html
@@ -16,7 +16,7 @@
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cairo">
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <!--owl slider stylesheet -->
@@ -125,12 +125,9 @@
             <img src="images/t1.png" alt="">
           </div>
           <div class="detail-box">
-            <h5>
-              x-000
+            <h5 style="font-family: 'Cairo'; font-size: 30px;">
+مجسم باب الملك عبدالله
             </h5>
-            <h6 class="">
-              Card
-            </h6>
           </div>
         </div>
       </div>
@@ -141,12 +138,9 @@
             <img src="images/t2.png" alt="">
           </div>
           <div class="detail-box">
-            <h5>
-              x-000
+            <h5 style="font-family: 'Cairo'; font-size: 30px;">
+              مجسم الكعبه المشرفه
             </h5>
-            <h6 class="">
-              Card
-            </h6>
           </div>
         </div>
       </div>
@@ -157,12 +151,9 @@
             <img src="images/t3.png" alt="">
           </div>
           <div class="detail-box">
-            <h5>
-              x-000
+            <h5 style="font-family: 'Cairo'; font-size: 30px;">
+              مجسم باب حجرة الصحابيين
             </h5>
-            <h6 class="">
-              Card
-            </h6>
           </div>
         </div>
       </div>
@@ -173,12 +164,9 @@
             <img src="images/t4.png" alt="">
           </div>
           <div class="detail-box">
-            <h5>
-              x-000
+            <h5 style="font-family: 'Cairo'; font-size: 30px;">
+              مجسم باب الملك عبدالعزيز
             </h5>
-            <h6 class="">
-              Card
-            </h6>
           </div>
         </div>
       </div>
@@ -189,12 +177,8 @@
             <img src="images/t5.png" alt="">
           </div>
           <div class="detail-box">
-            <h5>
-              x-000
+            <h5 style="font-family: 'Cairo'; font-size: 30px;">مجسم باب الكعبة الشريفة
             </h5>
-            <h6 class="">
-              Card
-            </h6>
           </div>
         </div>
       </div>
@@ -205,12 +189,9 @@
             <img src="images/t6.png" alt="">
           </div>
           <div class="detail-box">
-            <h5>
-              x-000
+            <h5 style="font-family: 'Cairo'; font-size: 30px;">
+              مجسم الروضه الشريفه
             </h5>
-            <h6 class="">
-              Card
-            </h6>
           </div>
         </div>
       </div>
@@ -269,9 +250,9 @@
                 EGYPT Location
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                Factory location : 10th of Ramadan, El-Robiki Cairo/ Egypt<br>
+                Office : 10th of Ramadan, Down Town mall<br>
+                01118709933 - 01101100946
               </p>
             </div>
           </div>
@@ -280,10 +261,9 @@
               <h5>
                 TURKEY Location
               </h5>
-              <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+              <p>Budak Mah. Yasem iś Mrk. No:42/910 <br>
+              Śehitkamil Zip code : 27090 Gaziantep / TURKEY <br>
+              +905070889191
               </p>
             </div>
           </div>
@@ -309,10 +289,7 @@
                     Our Works
                   </a>
                 </li>
-                <li>
-                  <br>
-                </li>
-                <li>
+                <li style="width: 200px;">
                 
                   <a href="">
                     <i class="fa fa-phone" aria-hidden="true"></i>
