--- a/index.html
+++ b/index.html
@@ -118,9 +118,8 @@
                       Welcome to Gümüş
                     </h2>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis fugit, sed tempora praesentium
-                      commodi error, hic recusandae repudiandae neque ad molestias, atque veritatis labore quae eveniet
-                      autem in
+                      Suudi Arabistan Krallığı'nda hediyelik eşya satışı için bir satış noktası. Hizmet seviyenizde daima ilerleme ve ilerleme
+                      için çabalıyoruz.
                     </p>
                   </div>
                 </div>
