--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                     d="M448,209.91a210.06,210.06,0,0,1-122.77-39.25V349.38A162.55,162.55,0,1,1,185,188.31V278.2a74.62,74.62,0,1,0,52.23,71.18V0l88,0a121.18,121.18,0,0,0,1.86,22.17h0A122.18,122.18,0,0,0,381,102.39a121.43,121.43,0,0,0,67,20.14Z" />
                 </svg>
               </a>
-              <a href="https://instagram.com/gumushhediyelikesyalar?igshid=MmIzYWVlNDQ5Yg==">
+              <a href="https://x.com/gumushhediyelik?s=09">
                 <svg fill=currentColor xmlns="http://www.w3.org/2000/svg " viewBox="0 0 512 512"
                   style=" height: 25px; color:#5081af ;">
                   <path
@@ -445,6 +445,8 @@
               <p>
                 Factory location : 10th of Ramadan, El-Robiki Cairo/ Egypt<br>
                 Office : 10th of Ramadan, Down Town mall<br>
+                  </p>
+                  <p style="color: #FFD700;">
                 01101100946
               </p>
             </div>
@@ -457,6 +459,8 @@
               </h5>
               <p>Budak Mah. Yasem iś Mrk. No:42/910 <br>
                 Śehitkamil Zip code : 27090 Gaziantep / TURKEY <br>
+                  </p>
+                  <p style="color: #FFD700;">
                 +905070889191
               </p>
             </div>
@@ -485,7 +489,7 @@
                 </li>
                 <li style="width: 200px;">
 
-                  <a href="">
+                  <a href="" style="color: #FFD700;">
                     <i class="fa fa-phone" aria-hidden="true"></i>
                     <span>
                       Call : +20 1117118800
