--- a/about.html
+++ b/about.html
@@ -123,6 +123,7 @@
                       نفخر باننا حاصلين على شهادة الايزو لان هذه الشهادة تعكس تميزنا والتزامنا بمعايير الجودة العالمية وتعزز ثقة عملائنا في
                       منتجاتنا وتحثنا على التطوير الدائم وتقديم ادق المجسمات العالمية
                     </p>
+                    <img src="images/zz.png" alt="" height="180px" width="180px">
                   </div>
                 </div>
               </div>
