--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
               نفخر باننا حاصلين على شهادة الايزو لان هذه الشهادة تعكس تميزنا والتزامنا بمعايير الجودة العالمية وتعزز ثقة
               عملائنا في
               منتجاتنا وتحثنا على التطوير الدائم وتقديم ادق المجسمات العالمية</p>
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px"
+             <!-- <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px"
                 y="0px" width="150.28px" height="150px" viewBox="0 0 595.28 544" enable-background="new 0 0 595.28 544"
                 xml:space="preserve">
                 <rect fill=#d8d0d0 width="595.83" height="544" />
@@ -408,7 +408,8 @@
                   <path fill="#00539F"
                     d="M494.97,499.769c0.6,5.13,2.981,8.678,7.146,10.644c2.132,0.999,4.598,1.499,7.396,1.499   c5.33,0,9.277-1.699,11.843-5.098c2.564-3.397,3.848-7.161,3.848-11.292c0-4.997-1.524-8.861-4.572-11.593   s-6.704-4.098-10.968-4.098c-3.099,0-5.755,0.6-7.97,1.799c-2.216,1.199-4.106,2.865-5.672,4.997l-7.795-0.45l5.448-38.525h37.175   v8.694h-30.431l-3.049,19.888c1.666-1.266,3.248-2.215,4.747-2.849c2.665-1.099,5.747-1.648,9.244-1.648   c6.562,0,12.126,2.115,16.689,6.346c4.564,4.23,6.846,9.594,6.846,16.09c0,6.763-2.091,12.726-6.271,17.889   c-4.181,5.164-10.852,7.745-20.013,7.745c-5.83,0-10.985-1.642-15.465-4.922c-4.48-3.28-6.988-8.319-7.521-15.115H494.97z" />
                 </g>
-              </svg>
+              </svg>-->
+              <img src="images/zz.png" alt="" height="180px" width="180px">
           </div>
           <br>
         </div>
